# mlnserver

./: .gitignore  CMakeLists.txt  README.md
cmake/: mlnsdk.cmake  spdlog.cmake
docker/: Dockerfile
mlnserver/: CMakeLists.txt  main.cpp  serviceEventReceiver.cpp  serviceEventReceiver.h  user.h  userManager.h
mlnserver/clientSample/: run.h  sampleConnector.h
